--- a/packages/import/composer.json
+++ b/packages/import/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^8.2",
+        "php": "^8.4",
         "illuminate/support": "^12.0",
         "illuminate/database": "^12.0",
         "illuminate/http": "^12.0",
@@ -44,7 +44,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Elaitech\\Import\\Providers\\ImportDashboardServiceProvider"
+                "Elaitech\\Import\\ImportServiceProvider"
             ]
         }
     },
