--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.4",
         "elaitech/data-mapper": "0.0.1",
         "elaitech/import": "0.0.1",
+        "filament/filament": "^4.0",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/breeze": "^2.3",
         "laravel/fortify": "^1.34",
@@ -65,7 +66,8 @@
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "@php artisan package:discover --ansi",
+            "@php artisan filament:upgrade"
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
